--- a/src/app/pages/summary-page/summary-page.component.html
+++ b/src/app/pages/summary-page/summary-page.component.html
@@ -1,3 +1,23 @@
-<div class="container-fluid mt-5 d-flex justify-content-center">
-  <h2>Summary Page</h2>
+<div class="container mt-5">
+  <div class="row justify-content-center mb-2">
+    <div class="col-6">
+        <app-heading-card [transactions] = "transactions"></app-heading-card>
+     </div>
+  </div>
+ <div class="row justify-content-center mb-2">
+    <div class="col-3">
+      <app-type-card [transactions] = "transactions" [typeStr] = "'income'"></app-type-card>
+    </div>
+    <div class="col-3">
+      <app-type-card [transactions] = "transactions" [typeStr] = "'investment'"></app-type-card>
+    </div>
+  </div>
+  <div class="row justify-content-center mb-2">
+    <div class="col-3">
+      <app-type-card [transactions] = "transactions" [typeStr] = "'outcome'"></app-type-card>
+    </div>
+    <div class="col-3">
+      <app-type-card [transactions] = "transactions" [typeStr] = "'loan'"></app-type-card>
+    </div>
+  </div>
 </div>
